# dpic-takehome-assignment

./: README.md  hello.py  insight_brief.md  pyproject.toml
data/: dpic.db
data/clean/: districts.csv  grievances.csv  iti_enrollments.csv  itis.csv
data/raw/: grievances.json  iti_enrollments.csv
dpic_takehome/: __main__.py
dpic_takehome/air_flow_automation/: dpic_dag.py
dpic_takehome/dashboard/: app.py  figures.py
dpic_takehome/data_pipeline/: cleaning.py  data_to_db.py  fetch_data.py  run_queries.py
dpic_takehome/sql/: queries.sql  schema.sql
