[project]
name = "dpic-takehome-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.3",
    "dash-ag-grid>=31.3.1",
    "dash-bootstrap-components>=2.0.1",
    "httpx>=0.28.1",
    "ipython>=9.1.0",
    "jellyfish>=1.2.0",
    "lxml>=5.3.2",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "ruff>=0.11.5",
]
